# accounts

./: Cargo.toml  concept.md
src/: lib.rs  main.rs  merge_rule_reading.rs  merge_rules.json
src/accounts_reading/: mod.rs
src/model/: account_history.rs  mod.rs  monthly_report.rs  monthly_reports.rs  record_merging.rs  year_month.rs
src/parsers/: bank_statement_header_parser.rs  dkb_account_parser.rs  dkb_credit_card_parser.rs  ing_extra_account_parser.rs  ing_giro_account_parser.rs  mod.rs  parser_factory.rs
src/parsers/testData/: dkb_account_statement.csv  dkb_credit_card_statement.csv  ing_extra_account_statement.csv  ing_giro_account_statement.csv
