[package]
name = "accounts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "accountslib"
path = "src/lib.rs"

[[bin]]
name = "accounts"
path = "src/main.rs"

[dependencies]
approx = "0.5.1"
chrono = "0.4.38"
csv = "1.3.0"
encoding_rs = "0.8.34"
encoding_rs_io = "0.1.7"
itertools = "0.13.0"
plotters = "0.3.6"
regex = "1.10.6"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "1.0.63"
